--- a/src/main/resources/templates/authorization.html
+++ b/src/main/resources/templates/authorization.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div>
-<form  method="post">
+<form action="/authorization" method="post">
     <input type="text" name="name" placeholder="Введите логин"/>
     <input type="text" name="surname" placeholder="Введите фамилию"/>
     <input type="text" name="mail" placeholder="Введите почту"/>
