--- a/src/main/resources/templates/verification.html
+++ b/src/main/resources/templates/verification.html
@@ -69,7 +69,7 @@
     </div>
 </nav>
 <div>
-    <form  method="post">
+    <form action="verification" method="post">
         <input type="text" name="code" placeholder="введите код из почты"/>
         <button type="submit">добавить</button>
     </form>
