--- a/src/main/resources/templates/zabpar.html
+++ b/src/main/resources/templates/zabpar.html
@@ -69,15 +69,15 @@
 </nav>
 
 
-  <form action="action_page.php">
+  <form action="/zabpar">
     <div class="contain" style="width: 25%">
       <h1 th:text="#{label.ForgotYourPassword}"></h1>
       <hr>
 
-      <label for="email"><b>E-mail</b></label>
+      <label><b>E-mail</b></label>
       <input type="text" placeholder="Введите Email" name="email" required>
 
-      <label for="psw"><b>Введите пароль с письма</b></label>
+      <label><b>Введите пароль с письма</b></label>
       <input type="password" placeholder="Введите пароль" name="psw" required>
 
       <hr>
